# Tangram

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/jh/tangram/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Tangram2.cpp  Tangram2.h  answer.txt  native-lib.cpp
app/src/main/java/com/example/jh/tangram/: AnimationPlayActivity.java  AnimationPlayer.java  HomeActivity.java  MainActivity.java  PortraitCameraView.java  ScreenParameter.java  TangramBlock.java  Tangrams.java  WholeTangram.java
app/src/main/res/layout/: activity_main.xml  animationplayactivity.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jh/tangram/: ExampleUnitTest.java
openCVLibrary310/: build.gradle
